--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ matplotlib = "^3.7.0"
 plotly = "^5.15.0"
 click = "^8.1.0"
 rich = "^13.0.0"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
