--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "scm_arena", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 requests = "^2.31.0"
 pydantic = "^2.0.0"
 numpy = "^1.24.0"
@@ -17,6 +17,10 @@ plotly = "^5.15.0"
 click = "^8.1.0"
 rich = "^13.0.0"
 seaborn = "^0.13.2"
+psutil = "^7.0.0"
+scipy = "^1.16.0"
+scikit-learn = "^1.7.0"
+networkx = "^3.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -35,14 +39,14 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 88
-target-version = ['py39']
+target-version = ['py311']
 
 [tool.isort]
 profile = "black"
 multi_line_output = 3
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
